--- a/SFML Template/SFML Template.vcxproj
+++ b/SFML Template/SFML Template.vcxproj
@@ -137,12 +137,20 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Button.cpp" />
+    <ClCompile Include="Checkbox.cpp" />
+    <ClCompile Include="InteractableHandler.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="TextField.cpp" />
+    <ClCompile Include="TextureHandler.cpp" />
     <ClCompile Include="Window\Window.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Button.h" />
+    <ClInclude Include="Checkbox.h" />
     <ClInclude Include="Interactable.h" />
+    <ClInclude Include="InteractableHandler.h" />
+    <ClInclude Include="TextField.h" />
+    <ClInclude Include="TextureHandler.h" />
     <ClInclude Include="Window\Window.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
